--- a/app/src/main/res/layout/activity_firstaid.xml
+++ b/app/src/main/res/layout/activity_firstaid.xml
@@ -143,6 +143,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/shishu_poripurok_khabar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
@@ -165,13 +166,14 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:text="@string/firstadi_shisur_poriporok_khabar"
+                            android:text="@string/firstaid_shisur_poriporok_khabar"
                             android:textColor="@color/button"
                             android:textStyle="bold" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/shishu_rog"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
