--- a/app/src/main/res/layout/activity_doctor_edit_profile.xml
+++ b/app/src/main/res/layout/activity_doctor_edit_profile.xml
@@ -83,6 +83,21 @@
                     android:textSize="16dp" />
 
                 <EditText
+                    android:id="@+id/etxtdesignation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="35dp"
+                    android:background="@drawable/border"
+                    android:gravity="center"
+                    android:hint="Designation"
+                    android:inputType="text"
+                    android:padding="16dp"
+                    android:textColor="@color/textcolor"
+                    android:textSize="16dp" />
+
+                <EditText
                     android:id="@+id/etxtcell"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -145,6 +160,7 @@
                     android:layout_marginRight="35dp"
                     android:background="@drawable/border"
                     android:gravity="center"
+                    android:hint="******"
                     android:inputType="textPassword"
                     android:maxLength="12"
                     android:padding="16dp"
@@ -162,7 +178,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/mother_update_profile"
+                    android:id="@+id/doctor_update_profile"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
 
