--- a/app/src/main/res/layout/activity_doctor_profile.xml
+++ b/app/src/main/res/layout/activity_doctor_profile.xml
@@ -83,6 +83,20 @@
                     android:textSize="16dp" />
 
                 <TextView
+                    android:id="@+id/txt_designation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginRight="35dp"
+                    android:background="@drawable/border"
+                    android:gravity="center"
+                    android:hint="Designation Null"
+                    android:inputType="text"
+                    android:padding="16dp"
+                    android:textColor="@color/textcolor"
+                    android:textSize="16dp" />
+
+                <TextView
                     android:id="@+id/etxtcell"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -164,7 +178,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/mother_update_profile"
+                    android:id="@+id/doctor_update_profile"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
 
