--- a/app/src/main/res/layout/activity_firstaid.xml
+++ b/app/src/main/res/layout/activity_firstaid.xml
@@ -54,6 +54,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/nobojatok_somporkito"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
