--- a/app/src/main/res/layout/activity_doctor_profile.xml
+++ b/app/src/main/res/layout/activity_doctor_profile.xml
@@ -69,6 +69,13 @@
                 android:paddingTop="10dp">
 
                 <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="Name:"
+                    android:textColor="@color/button" />
+
+                <TextView
                     android:id="@+id/etxtfullname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -81,6 +88,13 @@
                     android:padding="16dp"
                     android:textColor="@color/textcolor"
                     android:textSize="16dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="Designation:"
+                    android:textColor="@color/button" />
 
                 <TextView
                     android:id="@+id/txt_designation"
@@ -97,6 +111,13 @@
                     android:textSize="16dp" />
 
                 <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="Specialist:"
+                    android:textColor="@color/button" />
+
+                <TextView
                     android:id="@+id/txt_speciallist"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -104,11 +125,18 @@
                     android:layout_marginRight="35dp"
                     android:background="@drawable/border"
                     android:gravity="center"
-                    android:hint="Speciallist null"
+                    android:hint="Speciallist Null"
                     android:inputType="text"
                     android:padding="16dp"
                     android:textColor="@color/textcolor"
                     android:textSize="16dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="Mobile Number:"
+                    android:textColor="@color/button" />
 
                 <TextView
                     android:id="@+id/etxtcell"
@@ -130,6 +158,13 @@
 
 
                 <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="Location:"
+                    android:textColor="@color/button" />
+
+                <TextView
                     android:id="@+id/location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -145,6 +180,13 @@
                     android:padding="16dp"
                     android:textColor="@color/textcolor"
                     android:textSize="16dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="Gender:"
+                    android:textColor="@color/button" />
 
                 <TextView
                     android:id="@+id/gender"
@@ -163,6 +205,13 @@
                     android:textColor="@color/textcolor"
                     android:textSize="16dp" />
 
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="Password:"
+                    android:textColor="@color/button" />
 
                 <TextView
                     android:id="@+id/password"
