--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -30,7 +30,7 @@
                     app:srcCompat="@drawable/logo11" />
 
                 <TextView
-                    android:id="@+id/txt_name"
+                    android:id="@+id/doctor_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
