--- a/app/src/main/res/layout/doctor_list_item.xml
+++ b/app/src/main/res/layout/doctor_list_item.xml
@@ -42,7 +42,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/txt_name"
+                        android:id="@+id/doctor_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Name"
