--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,11 +2,17 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/search"
-        android:title="Search"
+
+<!--    <item android:id="@+id/search"-->
+<!--        android:title="@string/search"-->
+<!--        android:icon="@drawable/ic_search"-->
+<!--        app:showAsAction="collapseActionView|ifRoom"-->
+<!--        app:actionViewClass="androidx.appcompat.widget.SearchView"-->
+<!--        />-->
+    <item
+        android:id="@+id/search"
         android:icon="@drawable/ic_search"
+        android:title="search"
         app:showAsAction="collapseActionView|ifRoom"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
-
-
+        app:actionViewClass="android.widget.SearchView" />
 </menu>
